<resources>
    <string name="app_name">Палитра вкусов</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_pantry">Кладовая</string>
    <string name="title_profile">Профиль</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_icon">search_icon</string>
    <string name="saved">Сохранённое</string>
    <string name="myResipes">Мои рецепты</string>
    <string name="favorites_search_hint">Введите название рецепта или ингредиента</string>
    <string name="all_filters">Все фильтры</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="desserts">Десерты</string>
    <string name="launch">Обед</string>
    <string name="category_catalog">Категории</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">создайте аккаунт</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="end_create_account">регистрация</string>
    <string name="app_description">Открой для себя мир вкусных блюд с нашим уникальным приложением! Тысячи рецептов, пошаговые инструкции и советы от шеф-поваров помогут тебе удивлять друзей и близких новыми кулинарными шедеврами. Каждое блюдо — это новое открытие! Начни свое гастрономическое приключение прямо сейчас!</string>
    <string name="about_us"><u>О нас</u></string>
    <string name="login_account">Войти в аккаунт</string>
    <string name="end_login_account">Войти</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign up</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="verify_code">Проверить код</string>
    <string name="Continue">продолжить</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Подтвердить</string>
    <string name="password_updated">Пароль обновлен</string>


    <string name="create_recipe_title">Создать рецепт</string>
    <string name="recipe_name_hint">Название рецепта</string>
    <string name="ingredients_hint">Ингредиенты (каждый с новой строки)</string>
    <string name="instructions_hint">Пошаговая инструкция</string>
    <string name="cooking_time">Время приготовления</string>
    <string name="time_in_minutes">30</string>
    <string name="minutes">минут</string>
    <string name="save_recipe">Сохранить рецепт</string>

    <!--Ддя динамического подставления элементов рецепта в макет-->
    <string name="time_template">%d минут</string>
    <string name="ingredient_template" translatable="false">• %s</string>
    <string name="menu_theme">Тема</string>
    <string name="menu_logout">Выйти</string>
    <string name="menu_createRecept">Создать рецепт</string>


    <!--Строковые ресурсы для элементов Профиля-->
    <string name="profile_image_desc">Изображение профиля</string>
    <string name="change_avatar">Поменять аватар</string>
    <string name="profile_stats">Статистика профиля</string>
    <string name="recipes">Рецепты</string>
    <string name="articles">Статьи</string>
    <string name="videos">Видео</string>
    <string name="settings">Настройки</string>
    <string name="change_theme">Сменить тему</string>
    <string name="change_language">Сменить язык</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="logout">Выйти</string>
    <string name="hint_your_recipes">Здесь будут отображены ВАШИ рецепты</string>
    <string name="hint_favorite_recipes">Здесь будут отображены ваши любимые рецепты</string>
    <string name="wellcome_title">Открывай мир вкусов — готовь с удовольствием!</string>
    <string name="login">Войти</string>
    <string name="cold_eat">Холодные закуски</string>
    <string name="hot_eat">Горячие закуски</string>
    <string name="vegetable_salads">Овощные салаты</string>
    <string name="meat_salads">Мясные салаты</string>
    <string name="poultry_salads">Салаты с птицей</string>
    <string name="fish_salads">Рыбные салаты</string>
    <string name="soups">Супы</string>
    <string name="vegetable_dishes">Овощные блюда</string>
    <string name="meat_dishes">Блюда с мясом</string>
    <string name="poulry_dishes">Блюда с птицей</string>
    <string name="fish_dishes">Блюда с рыбой</string>
    <string name="side_dishes">Гарниры</string>
    <string name="bakery">Выпечка</string>
    <string name="drinks">Напитки</string>
    <string name="first_courses">Первые блюда</string>
    <string name="second_courses">Вторые блюда</string>
    <string name="fruits">Фрукты</string>
    <string name="vegetables">Овощи</string>
    <string name="dairy_products">Молочные продукты</string>
    <string name="berries">Ягоды</string>
    <string name="mushrooms">Грибы</string>
    <string name="selected_0">Выбрано 0</string>
    <string name="show_recipes">См. рецепты</string>
    <string name="most_have">Самое необходимое</string>
    <string name="reset_password_text">Укажите email адрес, указанный при регистрации для восстановления пароля!</string>
    <string name="make_selection_text">Укажите способ подтверждения для восстановления пароля!</string>
    <string name="confirm_changes">Подтвердите изменения</string>
    <string name="enter_password_typeOfverification">Введите пароль, отправленный на</string>
    <string name="enter_new_password_text">Укажите новый пароль для вашей учетной записи</string>
    <string name="success_changes_password_text">Ваш пароль был успешно изменен!</string>


    <string name="spaghetti">Спагетти</string>
    <string name="bacon">Бекон</string>
    <string name="eggs">Яйца</string>
    <string name="parmesan">Пармезан</string>
    <string name="milk">Молоко</string>
    <string name="pumpkin">Тыква</string>
    <string name="chicken_breast">Куриная грудка</string>
    <string name="chocolate">Шоколад</string>
    <string name="cream">Сливки</string>
    <string name="buckwheat">Гречка</string>
    <string name="complexity">Сложность</string>
    <string name="found_recipes">Найденные рецепты</string>
    <string name="tags">Теги</string>
    <string name="main_category">Основная категория</string>
    <string name="select_main_category">Выберите основную категорию</string>
    <string name="secondary_category">Дополнительная категория</string>
    <string name="select_secondary_category">Выберите дополнительную категорию</string>
    <string name="do_cash_network_recipes">Кешировать сетевые рецепты</string>
    <string name="do_not_cash_network_recipes">Отменить кеширование рецептов</string>
    <string name="cook_method">Способ приготовления:</string>
    <string name="ingredients_label">Ингредиенты:</string>
    <string name="Selected">"Выбрано "</string>
    <string name="Fill_in_all_fields">Заполните все поля</string>
    <string name="Do_save_recipe">Сохранить рецепт?</string>
    <string name="sure_to_save">Вы уверены, что хотите сохранить этот рецепт?</string>
    <string name="Yes">Да</string>
    <string name="Save_successful">Рецепт сохранен!</string>
    <string name="Cancellation">Отмена</string>
    <string name="Post_code_again_after_seconds">Отправить код повторно через: %1$s с</string>
    <string name="Post_code_again">Отправить код повторно</string>
    <string name="Code_post_on_email">Код отправлен на почту</string>
    <string name="Error_when_send_code">Ошибка отправки кода: %1$s</string>
    <string name="Connection_error">Ошибка подключения: %1$s</string>
    <string name="invalid_verification_code">Неверный код подтверждения</string>
    <string name="success_verification">Верификация успешна!</string>
    <string name="isPublicRecipe">Сделать рецепт публичным</string>
    <string name="restaurants">Рестораны</string>
    <string name="author_of_recipe">Автор рецепта: %1$s</string>

    <string-array name="main_categories">
        <item>@string/breakfast</item>
        <item>обед</item>
        <item>ужин</item>
        <item>десерт</item>
    </string-array>

    <!-- Дополнительные категории -->
    <string-array name="secondary_categories">
        <item>Холодные закуски</item>
        <item>Горячие закуски</item>
        <item>Овощные салаты</item>
        <item>Мясные салаты</item>
        <item>Салаты с птицей</item>
        <item>Рыбные салаты</item>
        <item>Супы</item>
        <item>Овощные блюда</item>
        <item>Блюда с мясом</item>
        <item>Блюда с птицей</item>
        <item>Блюда с рыбой</item>
        <item>Гарниры</item>
        <item>Выпечка</item>
        <item>Напитки</item>
        <item>Первые блюда</item>
        <item>Вторые блюда</item>
    </string-array>

</resources>