<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".logIn.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:src="@mipmap/ic_main_heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/wellcome_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/start_registration"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:backgroundTint="@color/bright_red"
                android:elevation="5dp"

                android:text="@string/end_create_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="70dp"
                android:layout_height="match_parent">

            </View>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_login"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:backgroundTint="@color/bright_red"
                android:elevation="5dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/about_us"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>


</FrameLayout>