<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_yellow"
    style="@style/Theme.ПалитраВкусов.NoActionBar"
    tools:context=".logIn.RegistrationFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_back_button_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/general_back_icon_24">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/create_account"
                android:textSize="40sp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold|italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/general_back_icon_24"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/general_back_icon_24"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/general_back_icon_24"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/general_back_icon_24"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/general_back_icon_24"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <!--#FD4400-->
            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="#FD4400"
                android:textColor="@color/white"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/end_create_account"
                android:elevation="5dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue"/>
        </LinearLayout>

    </FrameLayout>

</FrameLayout>