<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.ПалитраВкусов.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".logIn.ForgetPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/general_back_icon_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Укажите email адрес, указанный при регистрации для восстановления пароля!"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_email"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/general_back_icon_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_for_reset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/general_back_icon_24"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forget_passwotd_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#FD4400"
            android:elevation="5dp"
            android:text="@string/Continue"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>